* updated andriod package.

--- a/index.html
+++ b/index.html
@@ -25,20 +25,22 @@
   <div class="wrapper">
     <div class="centerbox fade scale in" id="frontBox">
       <h3 class="text-center">禅道手机客户端</h3>
-      <a href="publish/android/zentao_0.1.4.beta_20141117.apk" class="btn btn-lg btn-download btn-large" target="_blank"><i class="icon-android icon"></i> 下载</a>
-      <div class="desc text-center">0.1.4 beta</div>
+      <a href="publish/android/zentao_0.1.5.beta_20141119.apk" class="btn btn-lg btn-download btn-large" target="_blank"><i class="icon-android icon"></i> 下载</a>
+      <div class="desc text-center">0.1.5 beta</div>
       <div class="desc text-center">
         <button type="button" class="btn btn-link btn-box" id="showUpdate" data-target="#backBox" title="版本亮点"><i class="icon-flag-checkered"></i></button>
         <button type="button" class="btn btn-link btn-box" id="showUpdate" data-target="#qrcodeBox" title="手机访问"><i class='icon-qrcode'></i></button>
       </div>
     </div>
     <div class="centerbox fade scale btn-box" id="backBox" data-target="#frontBox">
-      <h3 class='text-center'>版本亮点</h3>
-      <ul style="padding-left: 80px">
-        <li>支持多用户切换</li>
-        <li>支持API数据压缩</li>
-        <li>详情页面描述支持图片</li>
-        <li>修复一些问题</li>
+      <h3 class='text-center' style="margin: 10px 0 20px">0.1.5 beta 版本亮点</h3>
+      <ul style="padding-left: 60px">
+        <li>底栏未读图标优化</li>
+        <li>优化tap事件，提高识别灵敏度</li>
+        <li>修复可能发生用户数据混乱的问题</li>
+        <li>详情页面加载远程数据时显示等待图标</li>
+        <li>增加应用调试模式</li>
+        <li>增加应用程序配置文件</li>
       </ul>
       <div class="desc text-center">
       <button type="button" class="btn btn-link" title="返回下载"><i class="icon-download"></i></button>
