* fixed user name display on setting veiw.  * changed user storage for debug mode.

--- a/zentao/setting/index.html
+++ b/zentao/setting/index.html
@@ -120,7 +120,7 @@ window.plusReady(function()
     var options  = wv.options;
 
     document.$id('userUrl').innerHTML     = options.user.url;
-    document.$id('userAccount').innerHTML = options.user.account;
+    document.$id('userAccount').innerHTML = options.user.name;
 
     document.$id('openUserUrl').on('tap', function()
     {
