* format date string for item views.

--- a/zentao/bug.html
+++ b/zentao/bug.html
@@ -30,8 +30,8 @@
       <div class="small"><span class="text-muted">浏览器: </span><span class="obj-os"></span></div>
       <div class="small"><span class="text-muted">严重程度: </span><strong class="obj-severity"></strong></div>
       <div class="small"><span class="text-muted">是否确认: </span><span class="obj-confirm" id="objConfirm"></span></div>
-      <div class="small"><span id="assignedTo" class="text-muted">指派给 <strong class="obj-assignedTo"></strong> 于 <span class="obj-assignedDate" data-format="MM月dd日hh:mm"></span></span><span id="noAssignedTo" class="text-muted">没有指派</span></div>
-      <div class="small text-muted">由 <span class="obj-openedBy">openedBy</span> 创建于 <span class="obj-openedDate" data-format="MM月dd日hh:mm"></span></div>
+      <div class="small"><span id="assignedTo" class="text-muted">指派给 <strong class="obj-assignedTo"></strong> 于 <span class="obj-assignedDate" data-type="date" data-format="MM月dd日hh:mm"></span></span><span id="noAssignedTo" class="text-muted">没有指派</span></div>
+      <div class="small text-muted">由 <span class="obj-openedBy">openedBy</span> 创建于 <span class="obj-openedDate" data-type="date" data-format="MM月dd日hh:mm"></span></div>
     </div>
   </header>
   <section>
