--- a/zentao/task.html
+++ b/zentao/task.html
@@ -37,8 +37,8 @@
     <div class="info info-more">
       <div class="small"><span class="text-muted">所属项目: </span><span class="obj-projectName"></span></div>
       <div class="small"><span class="text-muted">类型: </span><span class="obj-typeName"></span></div>
-      <div class="small"><span id="assignedTo" class="text-muted">指派给 <strong class="obj-assignedTo"></strong> 于 <span class="obj-assignedDate" data-format="MM月dd日hh:mm"></span></span></div>
-      <div class="small text-muted">由 <span class="obj-openedBy">openedBy</span> 创建于 <span class="obj-openedDate" data-format="MM月dd日hh:mm"></span></div>
+      <div class="small"><span id="assignedTo" class="text-muted">指派给 <strong class="obj-assignedTo"></strong> 于 <span class="obj-assignedDate" data-type="date" data-format="MM月dd日hh:mm"></span></span></div>
+      <div class="small text-muted">由 <span class="obj-openedBy">openedBy</span> 创建于 <span class="obj-openedDate" data-type="date" data-format="MM月dd日hh:mm"></span></div>
     </div>
   </header>
   <section id="timeBar">
