--- a/zentao/story.html
+++ b/zentao/story.html
@@ -25,12 +25,13 @@
       </div>
     </div>
     <div class="info info-more">
+      <div class="small"><span class="text-muted">是否确认: </span><span id="objConfirm"></span></div>
       <div class="small"><span class="text-muted">所处阶段: </span><span class="obj-stageName"></span></div>
       <div class="small"><span class="text-muted">预计工时: </span><span class="obj-estimate"></span></div>
       <div class="small"><span class="text-muted">所属产品: </span><span class="obj-productTitle"></span></div>
       <div class="small"><span class="text-muted">所属版本: </span><span class="obj-planTitle"></span></div>
-      <div class="small"><span id="assignedTo" class="text-muted">指派给 <strong class="obj-assignedTo"></strong> 于 <strong class="obj-assignedDate" data-format="MM月dd日hh:mm"></strong></span></div>
-      <div class="small text-muted">由 <strong class="obj-openedBy">openedBy</strong> 创建于 <strong class="obj-openedDate" data-format="MM月dd日hh:mm"></strong></div>
+      <div class="small"><span id="assignedTo" class="text-muted">指派给 <strong class="obj-assignedTo"></strong> 于 <strong class="obj-assignedDate" data-type="date" data-format="MM月dd日hh:mm"></strong></span></div>
+      <div class="small text-muted">由 <strong class="obj-openedBy">openedBy</strong> 创建于 <strong class="obj-openedDate" data-type="date" data-format="MM月dd日hh:mm"></strong></div>
     </div>
   </header>
   <section>
