--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   .centerbox {height: 300px; width: 300px; background: rgba(255,255,255,0.35); border-radius: 50%; margin: auto; padding: 45px 0; position: absolute; top: 50%; margin-top: -150px; margin-left: -150px; left: 50%; border: 2px dotted rgba(255,255,255,0.43); box-size: content-box; z-index: 10}
   .centerbox > h3 {margin-bottom: 30px; text-shadow: 1px 1px 3px rgba(255,255,255,.7);}
   .btn-download {display: block; width: 150px; margin: 0 auto; font-size: 24px; background: #8957a1; color: #fff; text-shadow: none; border: none;}
+  a, a:active, a:visited {color: #8957a1;}
+  a:hover {color: #bb90cf;}
   .btn-download:hover {background-color: #bb90cf; color: #fff}
   .btn-download .icon {font-size: 28px;}
   .btn-link, .btn-link:hover {color: #8957a1}
@@ -25,22 +27,22 @@
   <div class="wrapper">
     <div class="centerbox fade scale in" id="frontBox">
       <h3 class="text-center">禅道手机客户端</h3>
-      <a href="publish/android/zentao_0.1.5.beta_20141119.apk" class="btn btn-lg btn-download btn-large" target="_blank"><i class="icon-android icon"></i> 下载</a>
-      <div class="desc text-center">0.1.5 beta</div>
+      <a href="publish/android/zentao_0.1.6.beta_20141120.apk" class="btn btn-lg btn-download btn-large" target="_blank"><i class="icon-android icon"></i> 下载</a>
+      <div class="desc text-center">0.1.6 beta</div>
       <div class="desc text-center">
         <button type="button" class="btn btn-link btn-box" id="showUpdate" data-target="#backBox" title="版本亮点"><i class="icon-flag-checkered"></i></button>
         <button type="button" class="btn btn-link btn-box" id="showUpdate" data-target="#qrcodeBox" title="手机访问"><i class='icon-qrcode'></i></button>
       </div>
     </div>
     <div class="centerbox fade scale btn-box" id="backBox" data-target="#frontBox">
-      <h3 class='text-center' style="margin: 10px 0 20px">0.1.5 beta 版本亮点</h3>
+      <h3 class='text-center' style="margin: 10px 0 20px">0.1.6 beta 版本亮点</h3>
       <ul style="padding-left: 60px">
-        <li>底栏未读图标优化</li>
-        <li>优化tap事件，提高识别灵敏度</li>
-        <li>修复可能发生用户数据混乱的问题</li>
-        <li>详情页面加载远程数据时显示等待图标</li>
-        <li>增加应用调试模式</li>
-        <li>增加应用程序配置文件</li>
+        <li>修复详情界面时间日期显示格式</li>
+        <li>调试模式可以强制应用定制界面尺寸</li>
+        <li>修复设置界面用户信息显示不正确</li>
+        <li>增加新的Badge颜色类型</li>
+        <li>调整需求界面状态颜色显示</li>
+        <li><a href="https://github.com/easysoft/zentaomobile/blob/master/CHANGES.md">了解更多...</a></li>
       </ul>
       <div class="desc text-center">
       <button type="button" class="btn btn-link" title="返回下载"><i class="icon-download"></i></button>
