--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <li>修复设置界面用户信息显示不正确</li>
         <li>增加新的Badge颜色类型</li>
         <li>调整需求界面状态颜色显示</li>
-        <li><a href="https://github.com/easysoft/zentaomobile/blob/master/CHANGES.md">了解更多...</a></li>
+        <li><a target="_blank" href="https://github.com/easysoft/zentaomobile/blob/master/CHANGES.md">了解更多...</a></li>
       </ul>
       <div class="desc text-center">
       <button type="button" class="btn btn-link" title="返回下载"><i class="icon-download"></i></button>
