* ajusted style of table view cells.

--- a/zentao/stories.html
+++ b/zentao/stories.html
@@ -7,6 +7,7 @@
   <link href="css/zui.m.min.css" rel="stylesheet"/>
   <link href="css/style.css" rel="stylesheet"/>
   <link href="css/subpage.css" rel="stylesheet"/>
+  <style>.table-view-cell > a {padding-right: 60px !important;}</style>
 </head>
 <body data-slider="#slider">
 <div class="content">
