--- a/zentao/story.html
+++ b/zentao/story.html
@@ -36,7 +36,7 @@
   </header>
   <section>
     <h5>需求描述</h5>
-    <div class="content-padded obj-desc" data-type="html" data-default="<span class='small text-muted'>--- 没有描述 ---</span>"></div>
+    <div class="content-padded obj-spec" data-type="html" data-default="<span class='small text-muted'>--- 没有描述 ---</span>"></div>
   </section>
   <section>
     <h5>验收标准</h5>
